<!--
  ~ Copyright 2016 andryr
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/pref_dark_theme_key"
        android:title="@string/pref_dark_theme_title"/>
    <ListPreference
        android:defaultValue="@string/standard_tuning"
        android:entries="@array/pref_tuning_entries"
        android:entryValues="@array/pref_tuning_values"
        android:key="@string/pref_tuning_key"
        android:title="@string/pref_tuning_title"
        android:summary="%s"/>

    <Preference
        android:title="@string/pref_privacy_policy_title"
        android:key="@string/pref_privacy_policy_key">

        <intent
            android:action="android.intent.action.VIEW"
            android:data="http://andryr.github.io/guitar-tuner/privacy/"
            />

    </Preference>
</PreferenceScreen>
